syntax = "proto3";
package pb;

message StcErrorNotice{
    int32 Id=1;
    string info=2;
}



